src/gen/com/verilogplugin/lang/core/parser/VerilogParser.java
// This is a generated file. Not intended for manual editing.
package com.verilogplugin.lang.core.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.verilogplugin.lang.core.psi.VerilogTokenTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class VerilogParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType root_, PsiBuilder builder_) {
    parseLight(root_, builder_);
    return builder_.getTreeBuilt();
  }

  public void parseLight(IElementType root_, PsiBuilder builder_) {
    boolean result_;
    builder_ = adapt_builder_(root_, builder_, this, EXTENDS_SETS_);
    Marker marker_ = enter_section_(builder_, 0, _COLLAPSE_, null);
    result_ = parse_root_(root_, builder_);
    exit_section_(builder_, 0, marker_, root_, result_, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType root_, PsiBuilder builder_) {
    return parse_root_(root_, builder_, 0);
  }

  static boolean parse_root_(IElementType root_, PsiBuilder builder_, int level_) {
    return input(builder_, level_ + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ASSIGN_EXPR, BASIC_EXPR, EXPR),
  };

  /* ********************************************************** */
  // '@' '(' always_events ')' |
  //     '@' '(' '*' ')' |
  //     '@' ATTR_BEGIN ')' |
  //     '@' '(' ATTR_END |
  //     '@' '*' |   /* empty */
  // // http://mdaines.github.io/grammophone/
  public static boolean always_cond(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALWAYS_COND, "<always cond>");
    result_ = always_cond_0(builder_, level_ + 1);
    if (!result_) result_ = always_cond_1(builder_, level_ + 1);
    if (!result_) result_ = always_cond_2(builder_, level_ + 1);
    if (!result_) result_ = always_cond_3(builder_, level_ + 1);
    if (!result_) result_ = always_cond_4(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, ALWAYS_COND_5_0);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // '@' '(' always_events ')'
  private static boolean always_cond_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, "(");
    result_ = result_ && always_events(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ")");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // '@' '(' '*' ')'
  private static boolean always_cond_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, "(");
    result_ = result_ && consumeToken(builder_, "*");
    result_ = result_ && consumeToken(builder_, ")");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // '@' ATTR_BEGIN ')'
  private static boolean always_cond_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, ATTR_BEGIN);
    result_ = result_ && consumeToken(builder_, ")");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // '@' '(' ATTR_END
  private static boolean always_cond_3(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond_3")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, "(");
    result_ = result_ && consumeToken(builder_, ATTR_END);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // '@' '*'
  private static boolean always_cond_4(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_cond_4")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, "@");
    result_ = result_ && consumeToken(builder_, "*");
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // TOK_POSEDGE expr |  TOK_NEGEDGE expr  | expr
  public static boolean always_event(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_event")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALWAYS_EVENT, "<always event>");
    result_ = always_event_0(builder_, level_ + 1);
    if (!result_) result_ = always_event_1(builder_, level_ + 1);
    if (!result_) result_ = expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // TOK_POSEDGE expr
  private static boolean always_event_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_event_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TOK_POSEDGE);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // TOK_NEGEDGE expr
  private static boolean always_event_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_event_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TOK_NEGEDGE);
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // always_event |
  //     always_event TOK_OR always_events |
  //     always_event ',' always_events
  public static boolean always_events(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_events")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALWAYS_EVENTS, "<always events>");
    result_ = always_event(builder_, level_ + 1);
    if (!result_) result_ = always_events_1(builder_, level_ + 1);
    if (!result_) result_ = always_events_2(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // always_event TOK_OR always_events
  private static boolean always_events_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_events_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = always_event(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TOK_OR);
    result_ = result_ && always_events(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // always_event ',' always_events
  private static boolean always_events_2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_events_2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = always_event(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ",");
    result_ = result_ && always_events(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // (attr_opt)? TOK_ALWAYS always_cond   behavioral_stmt  |
  //     (attr_opt)? TOK_INITIAL behavioral_stmt
  public static boolean always_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt")) return false;
    if (!nextTokenIs(builder_, "<always stmt>", ATTR_BEGIN, TOK_ALWAYS, TOK_INITIAL)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ALWAYS_STMT, "<always stmt>");
    result_ = always_stmt_0(builder_, level_ + 1);
    if (!result_) result_ = always_stmt_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // (attr_opt)? TOK_ALWAYS always_cond   behavioral_stmt
  private static boolean always_stmt_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = always_stmt_0_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TOK_ALWAYS);
    result_ = result_ && always_cond(builder_, level_ + 1);
    result_ = result_ && behavioral_stmt(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (attr_opt)?
  private static boolean always_stmt_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_0_0")) return false;
    always_stmt_0_0_0(builder_, level_ + 1);
    return true;
  }

  // (attr_opt)
  private static boolean always_stmt_0_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_0_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = attr_opt(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (attr_opt)? TOK_INITIAL behavioral_stmt
  private static boolean always_stmt_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = always_stmt_1_0(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, TOK_INITIAL);
    result_ = result_ && behavioral_stmt(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  // (attr_opt)?
  private static boolean always_stmt_1_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_1_0")) return false;
    always_stmt_1_0_0(builder_, level_ + 1);
    return true;
  }

  // (attr_opt)
  private static boolean always_stmt_1_0_0(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "always_stmt_1_0_0")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = attr_opt(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // arg_list2 | /* empty */
  public static boolean arg_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arg_list")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARG_LIST, "<arg list>");
    result_ = arg_list2(builder_, level_ + 1);
    if (!result_) result_ = consumeToken(builder_, ARG_LIST_1_0);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // single_arg |    single_arg ',' arg_list
  public static boolean arg_list2(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arg_list2")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ARG_LIST_2, "<arg list 2>");
    result_ = single_arg(builder_, level_ + 1);
    if (!result_) result_ = arg_list2_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // single_arg ',' arg_list
  private static boolean arg_list2_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "arg_list2_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = single_arg(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ",");
    result_ = result_ && arg_list(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // TOK_ASSERT '(' expr ')' ';'
  public static boolean assert_(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assert_")) return false;
    if (!nextTokenIs(builder_, TOK_ASSERT)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TOK_ASSERT);
    result_ = result_ && consumeToken(builder_, "(");
    result_ = result_ && expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ")");
    result_ = result_ && consumeToken(builder_, ";");
    exit_section_(builder_, marker_, ASSERT_, result_);
    return result_;
  }

  /* ********************************************************** */
  // expr '=' expr
  public static boolean assign_expr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_expr")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGN_EXPR, "<assign expr>");
    result_ = expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, "=");
    result_ = result_ && expr(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  /* ********************************************************** */
  // assign_expr |  assign_expr ',' assign_expr_list
  public static boolean assign_expr_list(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_expr_list")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ASSIGN_EXPR_LIST, "<assign expr list>");
    result_ = assign_expr(builder_, level_ + 1);
    if (!result_) result_ = assign_expr_list_1(builder_, level_ + 1);
    exit_section_(builder_, level_, marker_, result_, false, null);
    return result_;
  }

  // assign_expr ',' assign_expr_list
  private static boolean assign_expr_list_1(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_expr_list_1")) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = assign_expr(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ",");
    result_ = result_ && assign_expr_list(builder_, level_ + 1);
    exit_section_(builder_, marker_, null, result_);
    return result_;
  }

  /* ********************************************************** */
  // TOK_ASSIGN assign_expr_list ';'
  public static boolean assign_stmt(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "assign_stmt")) return false;
    if (!nextTokenIs(builder_, TOK_ASSIGN)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = consumeToken(builder_, TOK_ASSIGN);
    result_ = result_ && assign_expr_list(builder_, level_ + 1);
    result_ = result_ && consumeToken(builder_, ";");
    exit_section_(builder_, marker_, ASSIGN_STMT, result_);
    return result_;
  }

  /* ********************************************************** */
  // attr_opt *
  public static boolean attr(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attr")) return false;
    Marker marker_ = enter_section_(builder_, level_, _NONE_, ATTR, "<attr>");
    while (true) {
      int pos_ = current_position_(builder_);
      if (!attr_opt(builder_, level_ + 1)) break;
      if (!empty_element_parsed_guard_(builder_, "attr", pos_)) break;
    }
    exit_section_(builder_, level_, marker_, true, false, null);
    return true;
  }

  /* ********************************************************** */
  // hierarchical_id  |  hierarchical_id '=' expr
  public static boolean attr_assign(PsiBuilder builder_, int level_) {
    if (!recursion_guard_(builder_, level_, "attr_assign")) return false;
    if (!nextTokenIs(builder_, IDENTIFIER)) return false;
    boolean result_;
    Marker marker_ = enter_section_(builder_);
    result_ = hierarchical_id(builder_, level_ + 1);
    if (!result_) result_ = attr_assign_1(builder_, level_ + 1);
    exit_section_(builder_, marker_, ATTR_ASSIGN, result_);
    return result_;
  }
